data/derived/comb/progs/unify/prog6828.ml.out
Characters 259-280:
  removeZero (add (padZero l1 l2));;
             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
